sumo/tests/sumo/errors/network/junction/root__junction#id__empty2/errors.sumo
Error: Missing id of a junction-object.
 Can not build according junction.
Quitting (on error).
